Fixing the cards alignment and implemented the cities tables

--- a/weather/style.css
+++ b/weather/style.css
@@ -9,5 +9,9 @@
     align-items: center;
     justify-content: center;
 }
-.container .col{
+.cardsDiv{
+    margin-bottom:50px;     
+}
+.tagline{
+    padding-bottom: 10px;
 }
